[package]
name = "spire-achievements-tracker"
version = "0.1.3"
edition = "2021"
description = "A GUI app for tracking achievements in Slay the Spire."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ariasanovsky/spire-achievements-tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
eframe = "0.15.0"
serde = { version ="1.0.164", features = ["derive"] }
serde_json = "1.0.97"
rodio = "0.17.1"
